[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/command/door_off_alarm_of.png" type="Texture" id=1]
[ext_resource path="res://screens/scripts/captain.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -343.0
margin_bottom = -488.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.881, 0.893 )
texture = ExtResource( 1 )
centered = false

[node name="Button" type="Button" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 315.0
margin_top = 36.0
margin_right = 361.0
margin_bottom = 90.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 170.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 105.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 399.0
margin_top = 20.0
margin_right = 467.0
margin_bottom = 88.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Sprite/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Sprite/Button3" to="." method="_on_Button3_pressed"]
